# document-chat-website

./: .gitignore  chat_db.py  create_database.py  frontend.py  pyproject.toml  query_data.py  requirements.txt  server.py
database/: chat.db
