[project]
name = "rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.1",
    "ollama>=0.6.1",
    "pdfplumber>=0.11.9",
    "python-magic-bin>=0.4.14",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
    "unstructured[md]>=0.21.5",
]
