[project]
name = "chat-with-doc-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "pdfplumber>=0.11.9",
    "python-multipart>=0.0.28",
    "streamlit>=1.55.0",
    "unstructured[md]>=0.21.5",
    "uvicorn>=0.42.0",
]
